--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             background-attachment: fixed; /* Fixed background */
             display: flex;
             flex-direction: column;
-            min-height: 100vh;
+            min-height: 100vh; /* Ensure body takes full viewport height */
             color: #333333; /* Default text color */
         }
         .header-bg {
@@ -28,10 +28,12 @@
             position: sticky;
             top: 0;
             z-index: 100;
+            width: 100%; /* Ensure header takes full width */
         }
         .footer-bg {
             background-color: #16a34a; /* Tailwind green-700 */
             color: #ffffff;
+            width: 100%; /* Ensure footer takes full width */
         }
         .nav-link {
             @apply px-4 py-2 rounded-md hover:bg-green-700 transition-colors duration-200;
@@ -41,30 +43,37 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            padding: 2rem;
+            justify-content: center; /* Center content vertically if space allows */
+            padding: 1rem; /* Adjust padding for mobile */
             text-align: center;
             background-color: rgba(255, 255, 255, 0.85); /* Semi-transparent white background for content */
-            margin: 2rem auto; /* Center the content block */
+            margin: 1rem auto; /* Adjust margin for mobile */
             border-radius: 1rem;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
             max-width: 1000px; /* Adjust max width for content */
-            width: 90%; /* Responsive width */
+            width: 95%; /* Responsive width, slightly larger for mobile */
+            box-sizing: border-box; /* Include padding in width calculation */
         }
         .poster-and-shortcuts {
             display: flex;
             flex-direction: column; /* Stack on small screens */
             align-items: center;
-            gap: 2rem;
+            gap: 1.5rem; /* Reduced gap for mobile */
             max-width: 900px; /* Max width for the combined section */
             width: 100%;
-            margin-bottom: 2rem;
+            margin-bottom: 1.5rem; /* Reduced margin for mobile */
         }
         @media (min-width: 768px) {
+            .main-content-wrapper {
+                padding: 2rem;
+                margin: 2rem auto;
+                width: 90%;
+            }
             .poster-and-shortcuts {
                 flex-direction: row; /* Side-by-side on larger screens */
                 align-items: flex-start; /* Align items to the top */
                 justify-content: center;
+                gap: 2rem;
             }
         }
         .poster-container {
@@ -83,29 +92,29 @@
         .shortcut-buttons {
             display: flex;
             flex-direction: column;
-            gap: 1rem;
+            gap: 0.75rem; /* Reduced gap for mobile */
             width: 100%;
             max-width: 250px; /* Max width for shortcut column */
         }
         .shortcut-button {
-            @apply flex items-center justify-center p-4 bg-green-500 text-white rounded-lg shadow-md hover:bg-green-600 transition-all duration-300 transform hover:scale-105;
+            @apply flex items-center justify-center p-3 text-sm bg-green-500 text-white rounded-lg shadow-md hover:bg-green-600 transition-all duration-300 transform hover:scale-105; /* Adjusted padding and font size for mobile */
             font-weight: bold;
             text-decoration: none;
         }
         .shortcut-button i {
-            margin-right: 0.75rem;
-            font-size: 1.5rem;
+            margin-right: 0.5rem; /* Adjusted margin for mobile */
+            font-size: 1.2rem; /* Adjusted font size for mobile */
         }
         .profile-box {
             background-color: #4CAF50; /* Green background for the profile box */
-            padding: 1rem 1.5rem;
+            padding: 0.75rem 1rem; /* Adjusted padding for mobile */
             border-radius: 0.75rem;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             display: flex;
             flex-wrap: wrap; /* Allow wrapping on smaller screens */
             justify-content: center; /* Center items horizontally */
             align-items: center;
-            gap: 0.75rem 1.5rem; /* Vertical and horizontal gap */
+            gap: 0.5rem 1rem; /* Reduced gap for mobile */
             color: #ffffff;
             margin-top: 1rem;
         }
@@ -113,10 +122,11 @@
             display: flex;
             align-items: center;
             white-space: nowrap; /* Prevent line breaks within an item */
+            font-size: 0.9rem; /* Adjusted font size for mobile */
         }
         .profile-item i {
-            margin-right: 0.5rem;
-            font-size: 1.1rem;
+            margin-right: 0.4rem; /* Adjusted margin for mobile */
+            font-size: 1rem; /* Adjusted font size for mobile */
         }
 
         /* Hamburger Menu Styles */
@@ -138,6 +148,7 @@
             transition: left 0.3s ease;
             z-index: 1000; /* Above everything */
             box-shadow: 2px 0 5px rgba(0,0,0,0.3);
+            overflow-y: auto; /* Enable scrolling for sidebar content if needed */
         }
         .sidebar.open {
             left: 0; /* Slide in */
@@ -214,7 +225,7 @@
             margin: auto;
             padding: 2.5rem;
             border-radius: 0.75rem;
-            width: 80%;
+            width: 90%; /* Wider for mobile */
             max-width: 500px;
             box-shadow: 0 5px 15px rgba(0,0,0,0.3);
             position: relative;
@@ -291,7 +302,7 @@
             cursor: pointer;
         }
 
-        /* Responsive adjustments */
+        /* Responsive adjustments for header profile image on mobile */
         @media (max-width: 768px) {
             .nav-links {
                 display: none; /* Hide regular nav links on mobile */
@@ -311,19 +322,15 @@
                 width: 100%; /* Full width for stacked items */
                 justify-content: flex-start;
             }
-            /* Adjust header profile image for mobile if it was previously hidden */
-            .header-content .md:hidden.w-10 {
-                display: none; /* Hide the balancing div on mobile if profile image is shown */
-            }
-            .header-content .md\:flex.items-center {
-                display: flex; /* Ensure profile image is visible on mobile if desired */
+            /* Adjust header profile image for mobile */
+            .header-content .flex.items-center { /* Target the profile div */
                 margin-left: auto; /* Push to the right */
             }
-            .header-content .md\:flex.items-center img {
+            .header-content .flex.items-center img {
                 width: 35px; /* Smaller size for mobile header profile */
                 height: 35px;
             }
-            .header-content .md\:flex.items-center span {
+            .header-content .flex.items-center span {
                 font-size: 0.9rem; /* Smaller font for mobile header profile name */
             }
         }
@@ -442,6 +449,9 @@
 
         function showProfileModal() {
             document.getElementById('profileModal').style.display = 'flex';
+            // Ensure sidebar is closed when modal opens
+            document.getElementById('sidebar').classList.remove('open');
+            document.getElementById('overlay').classList.remove('active');
         }
 
         function hideProfileModal() {
@@ -453,6 +463,9 @@
             const lightboxImage = document.getElementById('lightboxImage');
             lightboxImage.src = src;
             lightbox.style.display = 'flex';
+            // Ensure sidebar is closed when lightbox opens
+            document.getElementById('sidebar').classList.remove('open');
+            document.getElementById('overlay').classList.remove('active');
         }
 
         function hideLightbox() {
